Fix bower typo and added commentary to emojiver.js

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   ],
   "description": "Emoji Enabler",
   "main": [
-    "./dist/js/emojive.js",
+    "./dist/js/emojiver.js",
     "./dist/css/emojiver.css"
   ],
   "license": "MIT",
